# coalhmm

./: AUTHORS  CMakeLists.txt  ChangeLog  README.md  buildBin.sh  package.cmake.in
CoalHMM/: CMakeLists.txt  CoalHMM.cpp  CoalHmmEmissionProbabilities.cpp  CoalHmmEmissionProbabilities.h  CoalHmmSimulator.cpp  CoalHmmSimulator.h  CoalHmmStateAlphabet.h  CoalHmmTransitionMatrix.h  CtmcTools.cpp  CtmcTools.h  HmmTools.cpp  HmmTools.h  HomogeneousCoalHmmEmissionProbabilities.cpp  HomogeneousCoalHmmEmissionProbabilities.h  IlsCoalHmmTransitionMatrix07.cpp  IlsCoalHmmTransitionMatrix07.h  IlsCoalHmmTransitionMatrix09.cpp  IlsCoalHmmTransitionMatrix09.h  NonClockAverageCoalHmmStateAlphabet.cpp  NonClockAverageCoalHmmStateAlphabet.h  RateAndCoalHmmStateAlphabet.cpp  RateAndCoalHmmStateAlphabet.h  RateAndCoalHmmTransitionMatrix.cpp  RateAndCoalHmmTransitionMatrix.h  ThreeSpeciesCoalHmmStateAlphabet.h  ThreeSpeciesCoalHmmStateAlphabet07.cpp  ThreeSpeciesCoalHmmStateAlphabet07.h  ThreeSpeciesCoalHmmStateAlphabet09.cpp  ThreeSpeciesCoalHmmStateAlphabet09.h  TwoSpeciesDiscretizedCoalHmmStateAlphabet.h  TwoSpeciesDiscretizedCoalHmmTransitionMatrix.cpp  TwoSpeciesDiscretizedCoalHmmTransitionMatrix.h  TwoSpeciesWithOutgroupDiscretizedCoalHmmStateAlphabet.cpp  TwoSpeciesWithOutgroupDiscretizedCoalHmmStateAlphabet.h  TwoSpeciesWithoutOutgroupDiscretizedCoalHmmStateAlphabet.cpp  TwoSpeciesWithoutOutgroupDiscretizedCoalHmmStateAlphabet.h
CoalHMM/generated-two-species/: generators.cpp  generators.h  mapping.cpp  mapping.h  statesets.cpp
Examples/: Geneflow.bpp  ILS.bpp  RunPythonUtilities.sh  Simulate.bpp  Simulate2.bpp  TwoSpecies.bpp  sim.fasta
Python/: CMakeLists.txt  post_decode.py  post_divergence.py  post_get_segments.py  post_mmhmm2hmm.py
Python/Simulations/: Analysis.R  gatherResults.R  options.bppseqgen  options.coalhmm_DIV.bpp  options.coalhmm_ILS09.bpp  simILS09.py  sim_pipeline.py
doc/: CMakeLists.txt  coalhmm.texi  version.texi
man/: CMakeLists.txt  coalhmm.1.txt
